--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
+        "lib/**/*.jar",
+        "c:\\Users\\User\\OneDrive\\Desktop\\class code\\jfreechart-1.0.1\\jfreechart-1.0.1\\lib\\jcommon-1.0.0.jar",
+        "c:\\Users\\User\\OneDrive\\Desktop\\class code\\jfreechart-1.0.1\\jfreechart-1.0.1\\lib\\jfreechart-1.0.1.jar"
     ]
 }
